<resources>
    <string name="app_name">Binary Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="txt_binary_decimal">Binary.Decimal</string>
    <string name="txt_binary_calculator">Binary Calculator</string>
    <string name="txt_binary_to_decimal">Binary to Decimal</string>
    <string name="txt_decimal_to_binary">Decimal to Binary</string>

    <string name="txt_others">Others</string>
    <string name="txt_rate_app">Rate App</string>
    <string name="txt_more_apps">More Apps</string>
    <string name="txt_exit">Exit</string>

    <string name="action_about_dev">About Dev</string>

    <string name="txt_dev_name">Binary Calculator</string>
    <string name="txt_version">v 1.0.0</string>

    <string name="txt_email">Email</string>
    <string name="my_email">droid.tech.1989@gmail.com</string>

    <string name="txt_gsm">Phone</string>
    <string name="my_gsm">+216 23 044 015</string>

    <string name="txt_fb">Facebook</string>
    <string name="my_fb">fb.me/DroidTech1989</string>

    <string name="btn_division">/</string>
    <string name="btn_equals">=</string>
    <string name="btn_zero">0</string>
    <string name="btn_substraction">-</string>
    <string name="btn_three">3</string>
    <string name="btn_two">2</string>
    <string name="btn_one">1</string>
    <string name="btn_multiplication">*</string>
    <string name="btn_six">6</string>
    <string name="btn_five">5</string>
    <string name="btn_four">4</string>
    <string name="btn_addition">+</string>
    <string name="btn_nine">9</string>
    <string name="btn_eight">8</string>
    <string name="btn_seven">7</string>
    <string name="title_activity_binary_calculator_main">BinaryCalculatorMainActivity</string>
</resources>
