<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    tools:context=".binarycalculator.ui.activities.AboutDevActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grad"
            android:paddingBottom="15dp">

            <RelativeLayout
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/circle_border">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="9dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circle"
                    android:contentDescription="@string/app_name"
                    android:padding="3dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/dev_pic" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/txt_dev_name"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_centerHorizontal="true"
                android:text="@string/txt_version"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fb"
                android:textColor="@color/headings"
                android:textSize="@dimen/about_dev_title" />

            <TextView
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_fb"
                android:textColor="@color/black"
                android:textSize="@dimen/about_dev_sub_title"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:textColor="@color/headings"
                android:textSize="@dimen/about_dev_title" />

            <TextView
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_email"
                android:textColor="@color/black"
                android:textSize="@dimen/about_dev_sub_title"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_gsm"
                android:textColor="@color/headings"
                android:textSize="@dimen/about_dev_title" />

            <TextView
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_gsm"
                android:textColor="@color/black"
                android:textSize="@dimen/about_dev_sub_title"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grey" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
